--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <nav>
-    <div>
+    <div class="navLinks">
       <img src="./images/slack-logo.png" alt="Slack logo" />
 
       <ul>
@@ -37,11 +37,11 @@
       </ul>
     </div>
 
-    <div>
+    <div class="navLinksRight">
       <button>
         <img src="./images/icon-search.png" alt="Search icon">
       </button>
-
+      <a href="#">Sign in</a>
       <button>
         <img src="./images/icon-menu.png" alt="Menu icon">
       </button>
@@ -54,47 +54,50 @@
           <a href="#">Try for free</a>
         </li>
       </ul>
+        <a href="#">Try for free</a>
+      </button>     
     </div>
   </nav>
 
+ 
   <header>
     <div>
       <h1>Great teamwork starts with a digital HQ</h1>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+      <p><strong>Slack is free to try</strong> for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div class= "headerLeft">
+        <button >Sign up with email</button>
 
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
+        <button class="longHeaderLeftButton">
+          <img src="./images/logo-google.png" alt="Google logo" height="50px"/>
           <span>Sign up with Google</span>
         </button>
       </div>
 
     </div>
 
-    <div>
+    <div class="headerRight">
       <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
 
   <main>
-    <section>
+    <section clas="firstSection">
       <p>Trusted by companies all over the world</p>
 
       <div>
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
-        <img src="./images/logo-nasa.png" alt="NASA logo" />
-        <img src="./images/logo-uber.png" alt="Uber logo" />
-        <img src="./images/logo-target.png" alt="Target logo" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo" />
+        <img src="./images/logo-airbnb.png" alt="Airbnb logo" height="25px"/>
+        <img src="./images/logo-nasa.png" alt="NASA logo" height="25px"/>
+        <img src="./images/logo-uber.png" alt="Uber logo" height="25px"/>
+        <img src="./images/logo-target.png" alt="Target logo" height="25px"/>
+        <img src="./images/logo-nyt.png" alt="New York Times logo" height="25px"/>
+        <img src="./images/logo-spotify.png" alt="Spotify logo"height="25px" />
       </div>
 
     </section>
 
-    <section>
+    <section class="secondSection">
       <div>
         <img src="./images/connectedness-mobile.png" alt="connectedness" />
       </div>
@@ -108,12 +111,12 @@
         </p>
 
         <a href="#">
-          <span>Learn more about channels</span>
+          <span><strong>Learn more about channels</strong></span>
         </a>
       </div>
     </section>
 
-    <section>
+    <section class="thirdSection">
       <div>
         <h2>Choose how you want to work</h2>
         <p>
@@ -123,7 +126,7 @@
         </p>
 
         <a href="#">
-          <span>Learn more about flexible communication</span>
+          <span><strong> more about flexible communication</strong> </span>
         </a>
       </div>
 
@@ -132,7 +135,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="fourSection">
       <div>
         <img src="./images/speed-mobile.png" alt="speed" />
       </div>
@@ -145,20 +148,21 @@
         </p>
 
         <a href="#">
-          <span>Learn more about the Slack platform</span>
+          <span><strong>Learn more about the Slack platform</strong></span>
         </a>
       </div>
     </section>
 
 
-    <section>
+    <section class="teams">
       <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+      <p><strong>Slack securely scales up to support collaboration at the world’s biggest companies.</strong></p>
 
       <div>
-        <button>Meet Slack for enterprise</button>
-        <button>Talk to sales</button>
+        <button class="buttonTeam1">Meet Slack for enterprise</button>
+        <button class="buttonTeam2">Talk to sales</button>
       </div>
+
 
       <ul>
         <li>
